--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -108,7 +108,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creating a character dictionary, sorting it in descending order \n",
+    "char_dict = {}\n",
+    "for char in os.listdir(char_path):\n",
+    "    char_dict[char] = len(os.listdir(os.path.join(char_path, char)))\n",
+    "    \n",
+    "# Sort in descending order \n",
+    "char_dict = caer.sort_dict(char_dict, descending=True)\n",
+    "char_dict "
+   ]
   },
   {
    "cell_type": "code",
