--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -124,6 +124,84 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Getting the first 10 categories with thye most number of images \n",
+    "characters = []\n",
+    "count = 0 \n",
+    "for i in char_dict:\n",
+    "    characters.append(i[0])\n",
+    "    count += 1 \n",
+    "    if count >= 10: \n",
+    "        break \n",
+    "characters "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the training data \n",
+    "train = caer.preprocess_from_dir(char_path, characters, channels=channels, IMG_SIZE=IMG_SIZE, isShuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of training samples \n",
+    "len(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualizing the data (OpenCV doesn't display wel in Jupyter notebooks)\n",
+    "import matplotlib.pyplot as plt \n",
+    "plt.figure(figsize=(30,30))\n",
+    "plt.imshow(train[0][0], cmap='gray')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
