--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -174,14 +174,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Separating the array and corresponding labels \n",
+    "featureSet, labels = caer.sep_train(train, IMG_SIZE=IMG_SIZE)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tensorflow.keras.utils import to_categorical \n",
+    "\n",
+    "# Normalize the featureSet ==> (0,1)\n",
+    "featureSet = caer.normalize(featureSet)\n",
+    "# Converting numerical labels to binary class vectors \n",
+    "labels = to_categorical(labels, len(characters))"
+   ]
   },
   {
    "cell_type": "code",
