--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -198,14 +198,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_train, x_val, y_train, y_val = caer.train_val_split(featureSet, labels, val_ratio=.2)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del train \n",
+    "del featureSet \n",
+    "del labels \n",
+    "gc.collect()"
+   ]
   },
   {
    "cell_type": "code",
