--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -230,7 +230,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Image data generator (introduces randomness in network ==> better accuracy)\n",
+    "import canaro.generators\n",
+    "\n",
+    "\n",
+    "datagen = canaro.generators.imageDataGenerator()\n",
+    "train_gen = datagen.flow(x_train, y_train, batch_size=BATCH_SIZE)"
+   ]
   },
   {
    "cell_type": "code",
