--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -80,10 +80,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tensorflow\n",
+      "  Downloading tensorflow-2.19.0-cp310-cp310-macosx_12_0_arm64.whl.metadata (4.0 kB)\n",
+      "Requirement already satisfied: absl-py>=1.0.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (2.1.0)\n",
+      "Requirement already satisfied: astunparse>=1.6.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (1.6.3)\n",
+      "Requirement already satisfied: flatbuffers>=24.3.25 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (25.2.10)\n",
+      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (0.6.0)\n",
+      "Requirement already satisfied: google-pasta>=0.1.1 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (0.2.0)\n",
+      "Collecting libclang>=13.0.0 (from tensorflow)\n",
+      "  Downloading libclang-18.1.1-1-py2.py3-none-macosx_11_0_arm64.whl.metadata (5.2 kB)\n",
+      "Requirement already satisfied: opt-einsum>=2.3.2 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (3.4.0)\n",
+      "Requirement already satisfied: packaging in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (24.0)\n",
+      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.3 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (5.29.5)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (2.32.3)\n",
+      "Requirement already satisfied: setuptools in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (69.5.1)\n",
+      "Requirement already satisfied: six>=1.12.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (1.16.0)\n",
+      "Requirement already satisfied: termcolor>=1.1.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (2.5.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.6 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (4.12.2)\n",
+      "Requirement already satisfied: wrapt>=1.11.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (1.17.2)\n",
+      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (1.65.5)\n",
+      "Collecting tensorboard~=2.19.0 (from tensorflow)\n",
+      "  Downloading tensorboard-2.19.0-py3-none-any.whl.metadata (1.8 kB)\n",
+      "Requirement already satisfied: keras>=3.5.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (3.8.0)\n",
+      "Requirement already satisfied: numpy<2.2.0,>=1.26.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (2.1.3)\n",
+      "Requirement already satisfied: h5py>=3.11.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorflow) (3.13.0)\n",
+      "Collecting ml-dtypes<1.0.0,>=0.5.1 (from tensorflow)\n",
+      "  Downloading ml_dtypes-0.5.1-cp310-cp310-macosx_10_9_universal2.whl.metadata (21 kB)\n",
+      "Collecting tensorflow-io-gcs-filesystem>=0.23.1 (from tensorflow)\n",
+      "  Downloading tensorflow_io_gcs_filesystem-0.37.1-cp310-cp310-macosx_12_0_arm64.whl.metadata (14 kB)\n",
+      "Requirement already satisfied: rich in /Users/azeez/miniforge3/lib/python3.10/site-packages (from keras>=3.5.0->tensorflow) (13.9.4)\n",
+      "Requirement already satisfied: namex in /Users/azeez/miniforge3/lib/python3.10/site-packages (from keras>=3.5.0->tensorflow) (0.0.8)\n",
+      "Requirement already satisfied: optree in /Users/azeez/miniforge3/lib/python3.10/site-packages (from keras>=3.5.0->tensorflow) (0.14.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from requests<3,>=2.21.0->tensorflow) (2025.1.31)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorboard~=2.19.0->tensorflow) (3.6)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorboard~=2.19.0->tensorflow) (0.7.0)\n",
+      "Requirement already satisfied: werkzeug>=1.0.1 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from tensorboard~=2.19.0->tensorflow) (3.1.3)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from werkzeug>=1.0.1->tensorboard~=2.19.0->tensorflow) (3.0.2)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from rich->keras>=3.5.0->tensorflow) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from rich->keras>=3.5.0->tensorflow) (2.18.0)\n",
+      "Requirement already satisfied: mdurl~=0.1 in /Users/azeez/miniforge3/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow) (0.1.2)\n",
+      "Downloading tensorflow-2.19.0-cp310-cp310-macosx_12_0_arm64.whl (252.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m252.5/252.5 MB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:02\u001b[0m\n",
+      "\u001b[?25hDownloading libclang-18.1.1-1-py2.py3-none-macosx_11_0_arm64.whl (25.8 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m25.8/25.8 MB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading ml_dtypes-0.5.1-cp310-cp310-macosx_10_9_universal2.whl (671 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m671.5/671.5 kB\u001b[0m \u001b[31m2.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading tensorboard-2.19.0-py3-none-any.whl (5.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.5/5.5 MB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading tensorflow_io_gcs_filesystem-0.37.1-cp310-cp310-macosx_12_0_arm64.whl (3.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.5/3.5 MB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: libclang, tensorflow-io-gcs-filesystem, ml-dtypes, tensorboard, tensorflow\n",
+      "  Attempting uninstall: ml-dtypes\n",
+      "    Found existing installation: ml-dtypes 0.4.0\n",
+      "    Uninstalling ml-dtypes-0.4.0:\n",
+      "      Successfully uninstalled ml-dtypes-0.4.0\n",
+      "  Attempting uninstall: tensorboard\n",
+      "    Found existing installation: tensorboard 2.17.1\n",
+      "    Uninstalling tensorboard-2.17.1:\n",
+      "      Successfully uninstalled tensorboard-2.17.1\n",
+      "Successfully installed libclang-18.1.1 ml-dtypes-0.5.1 tensorboard-2.19.0 tensorflow-2.19.0 tensorflow-io-gcs-filesystem-0.37.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
+    "%pip install tensorflow \n",
+    "\n",
     "import os \n",
     "import caer \n",
     "import canaro \n",
@@ -244,7 +316,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create our model (returns a compiled model)"
+   ]
   },
   {
    "cell_type": "code",
