--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -166,13 +166,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "IMG_SIZE = (80, 80)\n",
     "channels = 1 \n",
     "char_path = r'../input/the-simpsons-characters-dataset/simpsons_dataset'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install kagglehub \n",
+    "\n",
+    "import kagglehub\n",
+    "\n",
+    "# Download latest version\n",
+    "path = kagglehub.dataset_download(\"alexattia/the-simpsons-characters-dataset\")"
    ]
   },
   {
