--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -331,7 +331,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our model (returns a compiled model)"
+    "# Create our model (returns a compiled model)\n",
+    "from tensorflow.keras.models import Sequential \n",
+    "from tensorflow.keras.layers import Dense, Flatten, Dropout, Conv2D, MaxPooling2D \n",
+    "\n",
+    "output_dim = 10 \n",
+    "\n",
+    "w, h = IMG_SIZE[:2]\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Conv2D(32, (3, 3), activation='relu', padding='same', input_shape=(w, h,channels)))\n",
+    "model.add(Conv2D(32, (3, 3), activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.2))\n",
+    "\n",
+    "model.add(Conv2D(64, (3, 3), padding='same', activation='relu'))\n",
+    "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.2))"
    ]
   },
   {
