--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -348,7 +348,17 @@
     "model.add(Conv2D(64, (3, 3), padding='same', activation='relu'))\n",
     "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "model.add(Dropout(0.2))"
+    "model.add(Dropout(0.2))\n",
+    "\n",
+    "model.add(Conv2D(256, (3, 3), padding='same', activation='relu'))\n",
+    "model.add(Conv2D(256, (3, 3), activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.2))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1024, activation='relu'))\n",
+    "\n"
    ]
   },
   {
