--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -358,7 +358,9 @@
     "model.add(Flatten())\n",
     "model.add(Dropout(0.5))\n",
     "model.add(Dense(1024, activation='relu'))\n",
-    "\n"
+    "\n",
+    "# Output Layer \n",
+    "model.add(Dense(output_dim, activation='softmax'))"
    ]
   },
   {
