--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -368,14 +368,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.summary()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tensorflow.keras.optimizers.legacy import SGD \n",
+    "optimizer = SGD(learning_rate=0.001, decay=1e-7, momentum=0.9, nesterov=True)\n",
+    "model.compile(loss='binary_crossentropy', optimizer=optimizer, metrics=['accuracy'])"
+   ]
   },
   {
    "cell_type": "code",
