--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -388,7 +388,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Training the model \n",
+    "\n",
+    "from tensorflow.keras.callbacks import LearningRateScheduler \n",
+    "callbacks_list = [LearningRateScheduler(canaro.lr_schedule)]\n",
+    "training = model.fit(train_gen,\n",
+    "                     steps_per_epochs=len(x_train)//BATCH_SIZE,\n",
+    "                     epochs=EPOCHS, \n",
+    "                     validation_data=(x_val,y_val),\n",
+    "                     validation_steps=len(y_val)//BATCH_SIZE,\n",
+    "                     callbacks = callbacks_list)"
+   ]
   },
   {
    "cell_type": "code",
