--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -411,18 +411,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Testing"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_path = r'../input/the-simpsons-characters-dataset/kaggle_simpson_testset/kaggle_simpson_testset/charles_montgomery_burns_0.jpg'\n",
+    "\n",
+    "img = cv.imread(test_path)\n",
+    "\n",
+    "plt.imshow(img)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
