--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -436,7 +436,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def prepare(image):\n",
+    "    image = cv.cvtColor(image, cv.COLOR_BGR2GRAY)\n",
+    "    image = cv.resize(image, IMG_SIZE)\n",
+    "    image = caer.reshape(image, IMG_SIZE, 1)\n",
+    "    return image "
+   ]
   },
   {
    "cell_type": "code",
