--- a/simpsons.ipynb
+++ b/simpsons.ipynb
@@ -449,14 +449,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predictions = model.predict(prepare(img))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Getting class with the highest probability \n",
+    "print(characters[np.argmax(predictions[0])])"
+   ]
   },
   {
    "cell_type": "code",
